This version contains: splashscreen. menu
basic start project for Phaser2

--- a/css/common.css
+++ b/css/common.css
@@ -1,7 +1,7 @@
 /*
-        @package    crossRacer
+        @package    Pleisterman\Alien-Invasion
  
-        file:       \css\common\common.css
+        file:       \css\common.css
 */
 
 body {
